Changed plane found action to double tap

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -156,7 +156,7 @@
     <!-- Instructions are things that will be displayed on the overlay canvas. -->
     <Instructions>
         <Item id="PlaneFind">Please find a flat surface</Item>
-        <Item id="PlaneGood">Please find a flat surface&#10;Plane found. Continue scanning or tap to confirm</Item>
+        <Item id="PlaneGood">Please find a flat surface&#10;Plane found. Continue scanning or double tap to confirm</Item>
         
         <Item id="StageCreate">Creating stage...</Item>
         <Item id="StageConfirm">Double tap to confirm stage position</Item>
