Alternative tutorial remind mode and plane find test

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -178,6 +178,8 @@
     </Instructions>
 
     <Tutorials>
+        <Item id="PlaneTitle">Plane Finding</Item>
+        <Item id="PlaneText">Bodylogical AR requires some physical space for the stage where the stories take place. Move your device around some flat surface to let the camera scan for empty space. The scanned space will be highlighted in yellow.</Item>
         <Item id="InteractionTitle">Interaction</Item>
         <Item id="InteractionText">To interact with different AR components, such as buttons, simply click them on the screen.</Item>
     </Tutorials>
