Integrated new tutorials

--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -156,7 +156,6 @@
     <!-- Instructions are things that will be displayed on the overlay canvas. -->
     <Instructions>
         <Item id="PlaneFind">平たい表面を見つけなさい。</Item>
-        <Item id="PlaneGood">平たい表面を見つけなさい。&#10;この平面は良さそうです。ダブルタップして確認しなさい。</Item>
         
         <Item id="StageCreate">舞台創作中...</Item>
         <Item id="StageConfirm">Double tap to confirm stage position</Item>
@@ -191,7 +190,7 @@
         <Item id="InteractionText">Touch an avatar on the screen to examine his/her stats.&#10;In general, to interact with different AR components, such as buttons, simply touch/click them on the screen.</Item>
 
         <Item id="ControlTitle">Panel</Item>
-        <Item id="ControlText">The panel has three sections. The control panel allows you to switch between different visualizations, go forward in time, and to change different "interventions" for the avatar. The settings panel allows you to switch display language, or to choose another avatar. The ribbon panel is only for the Ribbon Chart visualization, and allows various tweaks to the graph.&#10;Now you can inspect the lifestyle of the avatar. When you are ready, click </Item>
+        <Item id="ControlText">The panel has three sections. The control panel allows you to switch between different visualizations, go forward in time, and to change different "interventions" for the avatar. The settings panel allows you to switch display language, or to choose another avatar. The ribbon panel is only for the Ribbon Chart visualization, and allows various tweaks to the graph.&#10;Now you can inspect the lifestyle of the avatar. When you are ready, click "Next" to continue to the first visualization, the Activity view.</Item>
 
         <Item id="ActivityTitle">Activity</Item>
         <Item id="ActivityText">Use the left half of the control panel to switch between internventions.&#10;Click "Animate" to start the timing progress. You can also drag the handle of the progress bar to jump to a specific year.&#10;Click "Reset" to go back to the current year.&#10;When you are done exploring, click "Next" to go to the Prius visualization.</Item>
