Fixed several bugs: - Start panel icon display - Localization key error in kidney message - Internals health status calculation - Removed debug messages in slider - Updated color for disabled buttons in control panel

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -110,7 +110,7 @@
 
         <Item id="PriKidneyGood">With low blood pressure and low glucose allows the kidney to filter toxins out of the blood.</Item>
         <Item id="PriKidneyIntermediate">Rising blood pressure and glucose starts to impair kidney function to filter toxins.</Item>
-        <Item id="PriKidneyBadVerbose">Persistent high blood pressure and high glucosee levels have led to kidney damage and the kidney stops filtering toxins, causing diabetes.</Item>
+        <Item id="PriKidneyBad">Persistent high blood pressure and high glucosee levels have led to kidney damage and the kidney stops filtering toxins, causing diabetes.</Item>
     </Legends>
 
     <!-- Archetype data -->
