--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -48,7 +48,7 @@
         <Item id="Controls">Controls</Item>
         <Item id="NextVis">Next</Item>
         <Item id="PrevVis">Previous</Item>
-        <Item id="Animate">Animate</Item>"
+        <Item id="Animate">Play/Pause</Item>
         <Item id="Settings">Settings</Item>
         <Item id="Language">Language: {0}</Item>
         <Item id="Exit">Exit</Item>
@@ -76,9 +76,9 @@
         <Item id="InfoMinimalTitle">Baseline Activities for Health</Item>
         <Item id="InfoCurrentTitle">Continue Current Activity</Item>
 
-        <Item id="InfoOptimal">Bodylogical suggests following this life activity in next 12 months, which helps you develop the optimal health condition with everyday fuill of energy and smile.</Item>
-        <Item id="InfoMinimal">Bodylogical believes that this following life activity plan can prevent you from most cardiovascular diseases, with minimal effort on the change to your current habits</Item>
-        <Item id="InfoCurrent">Choose this if you want to pursue a life with activities identical to the current ones. View the health status after 12 months</Item>
+        <Item id="InfoOptimal">Bodylogical suggests following this health plan, which would help the avatar develop the optimal health condition with everyday full of energy and smile.</Item>
+        <Item id="InfoMinimal">Bodylogical believes that this following plan can prevent the avatar from most cardiovascular diseases, with minimal effort on the change to the current habits.</Item>
+        <Item id="InfoCurrent">Choose this if you want see what might happen to the avatar if they follows their original lifestyle.</Item>
         
         <!-- Use &#10; to represent new line -->
         <Item id="InfoTemplate">Sleep: {0} hours/day&#10;Excercise: {1} hour/week&#10;Calories: {2} cal/day&#10;Prescription: {3}</Item>
@@ -100,16 +100,16 @@
         <!-- Prius -->
         <Item id="PriusWelcome">Please select a path to continue.</Item>
 
-        <Item id="PriHeartGood">Low blood pressure and cholesterol levels mean a healthy circulatory system.</Item>
-        <Item id="PriHeartIntermediate">Rising blood pressure and cholesterol will start damaging arteries that can lead to clogging.</Item>
-        <Item id="PriHeartBad">High blood pressure and cholesterol will clog the blood pressure and cause problems sucha s stroke, heart attack, etc.</Item>
+        <Item id="PriHeartGood">Low blood pressure and cholesterol levels indicate a healthy circulatory system.</Item>
+        <Item id="PriHeartIntermediate">Rising blood pressure and cholesterol will start damaging arteries that can lead to clogging in the blood vessel.</Item>
+        <Item id="PriHeartBad">High blood pressure and cholesterol will clog the blood vessel and cause problems sucha as stroke and heart attack.</Item>
 
-        <Item id="PriLiverGood">With a slim body and low LDL levels the liver has no problems.</Item>
-        <Item id="PriLiverIntermediate">A larger waist and rising LDL means the liver is accumulating fat.</Item>
-        <Item id="PriLiverBad">Obesity and persistent high LDL cause fat to accumulate in the liver and leads to fatty liver.</Item>
+        <Item id="PriLiverGood">With a slim body and low LDL levels, the liver has no problems.</Item>
+        <Item id="PriLiverIntermediate">A larger waist and rising LDL indicate that the liver is accumulating fat.</Item>
+        <Item id="PriLiverBad">Obesity and persistent high LDL cause fat to accumulate in the liver, leading to fatty liver.</Item>
 
-        <Item id="PriKidneyGood">With low blood pressure and low glucose allows the kidney to filter toxins out of the blood.</Item>
-        <Item id="PriKidneyIntermediate">Rising blood pressure and glucose starts to impair kidney function to filter toxins.</Item>
+        <Item id="PriKidneyGood">Low blood pressure and low glucose allows the kidney to filter toxins out of the blood.</Item>
+        <Item id="PriKidneyIntermediate">Rising blood pressure and glucose starts to impair kidney function.</Item>
         <Item id="PriKidneyBad">Persistent high blood pressure and high glucosee levels have led to kidney damage and the kidney stops filtering toxins, causing diabetes.</Item>
     </Legends>
 
@@ -160,16 +160,16 @@
         <Item id="ArchetypeRead">Reading archetype info...</Item>
         <Item id="ArchetypePredict">Please press "Next" Button</Item>
         <!-- Line chart -->
-        <Item id="LCToggleRibbon">You have toggled the ribbon charts. This would allow you to focus on individual years.</Item>
-        <Item id="LCBackground">You just hid the light blue panel background.</Item>
+        <Item id="LCToggleRibbon">You have toggled the ribbon charts. This would allow you to focus on the data rather than the change.</Item>
+        <Item id="LCBackground">You just hid the light blue panel background. Click again to show them.</Item>
         <Item id="LCDim">You just dimmed the bars. Click again to light them up.</Item>
         <Item id="LCSet">You just hid the bars. Click again to show them.</Item>
         <Item id="LCPullError">You clicked too fast. Wait a second and try again.</Item>
-        <Item id="LCPull">You just pull the section to the right. Click again to move it back.</Item>
+        <Item id="LCPull">The selected section has been highlighted.</Item>
         <!-- Path switch -->
         <Item id="PathSwitch">Switched to {0}</Item>
         <!-- Prius -->
-        <Item id="PriHealthChange">Health of organ has changed, Click on panel to learn more.</Item>
+        <Item id="PriHealthChange">Health of organ has changed. Check the panel on the right to learn more.</Item>
     </Instructions>
 
     <Tutorials>
@@ -183,37 +183,37 @@
         <Item id="StageText">Move your device to adjust the position of the stage. Double tap to confirm its position.</Item>
 
         <Item id="InteractionTitle">Interaction</Item>
-        <Item id="InteractionText">Touch an avatar to examine his/her stats.&#10;In general, click on AR objects, such as buttons, to interact.</Item>
+        <Item id="InteractionText">Touch an avatar to examine his/her stats.&#10;In general, click on AR objects, such as buttons, to interact with them.</Item>
 
         <Item id="ControlTitle">Panel</Item>
-        <Item id="ControlText">The control panel contains options to progress through the app and modify the avatar. The settings panel contains general settings for the app. &#10;Inspect the lifestyle of the avatar. When you are ready, click "Next" to continue.</Item>
+        <Item id="ControlText">The control panel contains options to progress through the app and modify the avatar. The settings panel contains general options for the app. &#10;Inspect the lifestyle of the avatar. When you are ready, click "Next" to continue.</Item>
 
         <Item id="ActivityTitle">Activity</Item>
-        <Item id="ActivityText">Use the left half of the panel to highlight a specific intervention.&#10;Click "Animate" to start the timing progress.</Item>
+        <Item id="ActivityText">Use the left half of the panel to highlight a specific intervention.&#10;Click "Play/Pause" to start the timing progress.</Item>
 
         <Item id="TimeTitle">Progressing Time</Item>
-        <Item id="TimeText">Watch how the avatars are slowing down as they grow older. Click "Animate" again to pause the progress.</Item>
+        <Item id="TimeText">Watch how the avatars slow down as they grow older. Click "Play/Pause" again to pause the progress.</Item>
         <Item id="TimeText2">You can also drag the handle of the progress bar to jump to a specific time. Click "Reset" to go back to the present.</Item>
-        <Item id="TimeText3">When you are done exploring, click "Next" to examine what caused these changes.</Item>
+        <Item id="TimeText3">Compare different interventions and how they change through time.&#10;When you are done exploring, click "Next" to examine what caused these changes.</Item>
 
         <Item id="PriusTitle">Prius</Item>
-        <Item id="PriusText">Check the panel on the right to inspect the details of the organs.&#10;Move your device closer to the avatar to see how Bodylogical works internally.</Item>
+        <Item id="PriusText">Use the left half of the panel to select an intervention.&#10;Check the board to the right of the avatar to learn more.&#10;Move your device closer to the avatar to see how Bodylogical works internally.</Item>
 
         <Item id="InternalTitle">Internals</Item>
-        <Item id="InternalText">Each block represents an organ or a system. Watch how the biometrics are connected together and the data flow between different blocks.</Item>
-        <Item id="PriusText2">When you are done exploring, click "Next" to check the actual data beneath this simulation.</Item>
+        <Item id="InternalText">Each block represents an organ or a system. Watch how the biometrics are connected together and the data flow across different blocks.</Item>
+        <Item id="PriusText2">When you are done exploring, click "Next" to check the data beneath this simulation.</Item>
 
         <Item id="RibbonTitle">Ribbon Chart</Item>
-        <Item id="RibbonText">Each panel represents the avatar's health status in 5 year intervals. The metrics are connected with ribbons to reflect changes.&#10;Click on one specific biometric to study it closely.</Item>
+        <Item id="RibbonText">Each card contains the avatar's health data in 5 year intervals. The metrics are connected with ribbons to reflect changes.&#10;Click on one specific card to study it closely.</Item>
 
-        <Item id="RibbonText2">The other panels have been moved to the right to reduce distraction.&#10;For more options, please click on the "Ribbons" panel.</Item>
+        <Item id="RibbonText2">The other cards have been moved to the right to reduce distraction.&#10;For more options, please check on the "Ribbons" panel.</Item>
 
         <Item id="RPanelTitle">Ribbons Panel</Item>
-        <Item id="RPanelText">Use the left part to switch between different interventions.&#10;On the right part there are four tweaking options:&#10;"Show Ribbons" will toggle the ribbons on and off and would allow you to better inspect the numbers themselves.</Item>
+        <Item id="RPanelText">Use the left part to switch between different interventions.&#10;On the right part there are four tweaking options:&#10;"Show Ribbons" will toggle the ribbons on and off so you could better inspect the numbers themselves.</Item>
    
-        <Item id="RPanelText2">Click the button again to restore the panel.&#10;"Transparent" will make the background transparent.</Item>
+        <Item id="RPanelText2">Click the button again to restore the ribbons.&#10;"Transparent" will make the background transparent.</Item>
         <Item id="RPanelText3">"Dim" will make the status bars dimmer so you can focus more on the ribbons.</Item>
         <Item id="RPanelText4">"Hide bars" will hide the status bars, and gets rid of any distractions for the ribbons.</Item>
-        <Item id="RPanelText5">Now that you have a better idea of the avatar, you can click "Next" to loop through the three visualizations, or use the "Settings" panel to select a new avatar.</Item>
+        <Item id="RPanelText5">Now that you have a better idea of this avatar, you can click "Next" to loop through the three visualizations, or use the "Settings" panel to select a new avatar.</Item>
     </Tutorials>
 </Localization>
