--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -48,7 +48,7 @@
         <Item id="Controls">コントロール</Item>
         <Item id="NextVis">次</Item>
         <Item id="PrevVis">前</Item>
-        <Item id="Animate">動画</Item>"
+        <Item id="Animate">Play/Pause</Item>
         <Item id="Settings">設定</Item>
         <Item id="Language">言語：{0}</Item>
         <Item id="Exit">エクシ</Item>
@@ -76,9 +76,9 @@
         <Item id="InfoMinimalTitle">Baseline Activities for Health</Item>
         <Item id="InfoCurrentTitle">Continue Current Activity</Item>
 
-        <Item id="InfoOptimal">Bodylogical suggests following this life activity in next 12 months, which helps you develop the optimal health condition with everyday fuill of energy and smile.</Item>
-        <Item id="InfoMinimal">Bodylogical believes that this following life activity plan can prevent you from most cardiovascular diseases, with minimal effort on the change to your current habits</Item>
-        <Item id="InfoCurrent">Choose this if you want to pursue a life with activities identical to the current ones. View the health status after 12 months</Item>
+        <Item id="InfoOptimal">Bodylogical suggests following this health plan, which would help the avatar develop the optimal health condition with everyday full of energy and smile.</Item>
+        <Item id="InfoMinimal">Bodylogical believes that this following plan can prevent the avatar from most cardiovascular diseases, with minimal effort on the change to the current habits.</Item>
+        <Item id="InfoCurrent">Choose this if you want see what might happen to the avatar if they follows their original lifestyle.</Item>
         
         <!-- Use &#10; to represent new line -->
         <Item id="InfoTemplate">Sleep: {0} hours/day&#10;Excercise: {1} hour/week&#10;Calories: {2} cal/day&#10;Prescription: {3}</Item>
