Image tracking for stage location

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -174,10 +174,13 @@
 
     <Tutorials>
         <Item id="PlaneTitle">Plane Finding</Item>
-        <Item id="PlaneText">Bodylogical AR requires physical space to function. Move your device around a flat surface to let the camera scan for space. The scanned space will be highlighted in yellow.</Item>
+        <Item id="PlaneText">Bodylogical AR requires physical space to function. Move your device around a flat surface to let the camera scan for space. The scanned space will be highlighted in yellow. You can also place a Bodylogical logo on the surface to anchor the stage.</Item>
         
         <Item id="ConfirmTitle">Confirm Plane</Item>
-        <Item id="ConfirmText">Bodylogical AR requires physical space to function. Move your device around a flat surface to let the camera scan for space. The scanned space will be highlighted in yellow.&#10;When you have found an ideal surface, double tap the screen to place your stage.</Item>
+        <Item id="ConfirmText">Bodylogical AR requires physical space to function. Move your device around a flat surface to let the camera scan for space. The scanned space will be highlighted in yellow. You can also place a Bodylogical logo on the surface to anchor the stage.&#10;When you have found an ideal surface, double tap the screen to place your stage.</Item>
+
+        <Item id="ImageConfirmTitle">Confirm Stage</Item>
+        <Item id="ImageConfirmText">Bodylogical AR has identified an anchor image. Move your image around and spin it to position your stage, and double tap the screen to fix its position.</Item>
 
         <Item id="StageTitle">Placing Stage</Item>
         <Item id="StageText">Move your device to adjust the position of the stage. Double tap to confirm its position.</Item>
