New story flow part 3: activity

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -84,7 +84,7 @@
         <Item id="InfoTemplate">Sleep: {0} hours/day&#10;Excercise: {1} hour/week&#10;Calories: {2} cal/day&#10;Prescription: {3}</Item>
         
         <!-- Time progression -->
-        <Item id="HeaderText">Year: {0} (Age {1}, {2})</Item> <!-- {2} is the path -->
+        <Item id="HeaderText">Year: {0} (Age {1})</Item>
         <Item id="SliderText">{0} year(s) after now</Item>
 
         <!-- Line chart -->
@@ -166,8 +166,6 @@
         <Item id="LCSet">You just hid the bars. Click again to show them.</Item>
         <Item id="LCPullError">You clicked too fast. Wait a second and try again.</Item>
         <Item id="LCPull">The selected section has been highlighted.</Item>
-        <!-- Path switch -->
-        <Item id="PathSwitch">Switched to {0}</Item>
         <!-- Prius -->
         <Item id="PriHealthChange">Health of organ has changed. Check the panel on the right to learn more.</Item>
     </Instructions>
