--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -84,7 +84,7 @@
         <Item id="InfoTemplate">Sleep: {0} hours/day&#10;Excercise: {1} hour/week&#10;Calories: {2} cal/day&#10;Prescription: {3}</Item>
 
         <!-- Time progression -->
-        <Item id="HeaderText">{0}年 ({1}歳, {2})</Item> <!-- {2} is the path -->
+        <Item id="HeaderText">{0}年 ({1}歳)</Item>
         <Item id="SliderText">{0}年後</Item>
 
         <!-- Line chart -->
@@ -166,8 +166,6 @@
         <Item id="LCSet">You just hid the bars. Click again to show them.</Item>
         <Item id="LCPullError">You clicked too fast. Wait a second and try again.</Item>
         <Item id="LCPull">You just pull the section to the right. Click again to move it back.</Item>
-        <!-- Path switch -->
-        <Item id="PathSwitch">Switched to {0}</Item>
         <!-- Prius -->
         <Item id="PriHealthChange">Health of organ has changed, Click on panel to learn more.</Item>
     </Instructions>
