--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -63,6 +63,11 @@
 
     <!-- Legneds are text displayed on world position canvases. -->
     <Legends>
+        <!-- Headers -->
+        <Item id="HeaderInfo">Name: {0}&#10;Age: {1}&#10;Job: {2}&#10;Health: {3}</Item>
+        <Item id="HeaderMeet"> Meet {0}</Item>
+        <Item id="HeaderJourney">Watch {0}'s Journey</Item>
+
         <!-- Panels -->
         <Item id="TimeControlHeader">Time Controls</Item>
         <Item id="RibbonChartHeader">Ribbons</Item>
@@ -103,11 +108,6 @@
 
     <!-- Archetype data -->
     <Archetypes>
-        <Item id="Name">Name: {0}</Item>
-        <Item id="Age">Age: {0}</Item>
-        <Item id="Occupation">Job: {0}</Item>
-        <Item id="Status">Health: {0}</Item>
-
         <!-- Info here subject to change. -->
         <Item id="Exercise">Exercise</Item>
         <Item id="Diet">Diet</Item>
