--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -17,9 +17,6 @@
         <Item id="StatusModerate">まあまあ</Item>
         <Item id="StatusBad">悪い</Item>
 
-        <Item id="ActJog">ジョギング</Item>
-        <Item id="ActSoc">サカ</Item>
-
         <Item id="PriOverall">まとめ</Item>
         <Item id="PriHeart">心臓</Item>
         <Item id="PriLiver">肝臓</Item>
@@ -27,8 +24,6 @@
     </General>
 
     <Buttons>
-        <Item id="Predict">予測する</Item>
-        <Item id="Info">情報</Item>
         <Item id="Reset">レセット</Item>
         <Item id="LineChart">線表</Item>
         <Item id="Activity">活動</Item>
@@ -41,8 +36,6 @@
         <Item id="LCTransparent">透明化</Item>
         <Item id="LCDim">暗くなる</Item>
         <Item id="LCHide">バーを隠す</Item>
-        <!-- Below are buttons specific to Activity. -->
-        <Item id="ActCurrent">今：{0}</Item>
 
         <!-- Below are buttons for control panel. -->
         <Item id="Controls">コントロール</Item>
@@ -54,8 +47,7 @@
         <Item id="Exit">エクシ</Item>
         <Item id="ResetAvatar">Reset Avatar</Item>
         <Item id="ResetStage">Reset Stage</Item>
-        <Item id="Switcher">変更</Item>
-        
+
         <!-- Toggles -->
         <Item id="ToggleOn">オン</Item>
         <Item id="ToggleOff">オフ</Item>
@@ -69,8 +61,7 @@
         <Item id="HeaderJourney">{0}さんのジャーニーを見る</Item>
 
         <!-- Panels -->
-        <Item id="TimeControlHeader">Time Controls</Item>
-        <Item id="RibbonChartHeader">Line Chart Controls</Item>
+        <Item id="RibbonChartHeader">Ribbons</Item>
         <Item id="MainHeader">コントロール</Item>
 
         <Item id="PanelVisual">ビジュアル</Item>
@@ -91,6 +82,7 @@
         <Item id="LCYear">{0}年</Item>
 
         <!-- Prius -->
+        <!-- Currently not in use -->
         <Item id="PriusWelcome">パースを選びなさい。</Item>
 
         <Item id="PriHeartGood">Low blood pressure and cholesterol levels mean a healthy circulatory system.</Item>
@@ -139,14 +131,14 @@
     <!-- Instructions are things that will be displayed on the overlay canvas. -->
     <Instructions>
         <Item id="PlaneFind">平たい表面を見つけなさい。</Item>
-        
+
         <Item id="StageCreate">舞台創作中...</Item>
         <Item id="StageConfirm">Double tap to confirm stage position</Item>
-        
+
         <Item id="ArchetypeSelect">Select archetype to start</Item>
         <Item id="ArchetypeRead">Reading archetype info...</Item>
-        <Item id="ArchetypePredict">「次」バトンを押しなさい。</Item>
         <!-- Line chart -->
+        <!-- Currently NOT in use -->
         <Item id="LCToggleRibbon">You have toggled the ribbon charts. This would allow you to focus on individual years.</Item>
         <Item id="LCBackground">You just hid the light blue panel background.</Item>
         <Item id="LCDim">You just dimmed the bars. Click again to light them up.</Item>
@@ -160,9 +152,12 @@
     <Tutorials>
         <Item id="PlaneTitle">Plane Finding</Item>
         <Item id="PlaneText">Bodylogical AR requires physical space to function. Move your device around a flat surface to let the camera scan for space. The scanned space will be highlighted in yellow.</Item>
-        
+
         <Item id="ConfirmTitle">Confirm Plane</Item>
         <Item id="ConfirmText">Bodylogical AR requires physical space to function. Move your device around a flat surface to let the camera scan for space. The scanned space will be highlighted in yellow.&#10;When you have found an ideal surface, double tap the screen to place your stage.</Item>
+
+        <Item id="ImageConfirmTitle">Confirm Stage</Item>
+        <Item id="ImageConfirmText">Bodylogical AR has identified an anchor image. Move your image around and spin it to position your stage, and double tap the screen to fix its position.</Item>
 
         <Item id="StageTitle">Placing Stage</Item>
         <Item id="StageText">Move your device to adjust the position of the stage. Double tap to confirm its position.</Item>
@@ -170,11 +165,14 @@
         <Item id="InteractionTitle">Interaction</Item>
         <Item id="InteractionText">Touch an avatar to examine his/her stats.&#10;In general, click on AR objects, such as buttons, to interact.</Item>
 
-        <Item id="ControlTitle">Panel</Item>
-        <Item id="ControlText">The control panel contains options to progress through the app and modify the avatar. The settings panel contains general settings for the app. &#10;Inspect the lifestyle of the avatar. When you are ready, click "Next" to continue.</Item>
+        <Item id="LifestyleTitle">Lifestyles</Item>
+        <Item id="LifestyleText">Click on the four icons to inspect the avatar's lifestyle.</Item>
+
+        <Item id="VisualizationTitle">Visualizations</Item>
+        <Item id="VisualizationText">After checking the lifestyle, click on the icon to begin the visualization and walk into the future of the avatar.</Item>
 
         <Item id="ActivityTitle">Activity</Item>
-        <Item id="ActivityText">Use the left half of the panel to highlight a specific intervention.&#10;Click "Animate" to start the timing progress.</Item>
+        <Item id="ActivityText">You will now see three variants of the same avatar, each with a separate "intervention", running on the street. Click "Play/Pause" to start the timing progress.</Item>
 
         <Item id="TimeTitle">Progressing Time</Item>
         <Item id="TimeText">Watch how the avatars are slowing down as they grow older. Click "Animate" again to pause the progress.</Item>
@@ -186,11 +184,8 @@
 
         <Item id="InternalTitle">Internals</Item>
         <Item id="InternalText">Each block represents an organ or a system. Watch how the biometrics are connected together and the data flow between different blocks.</Item>
-        <Item id="PriusText2">When you are done exploring, click "Next" to check the actual data beneath this simulation.</Item>
 
-        <Item id="RibbonTitle">Ribbon Chart</Item>
-        <Item id="RibbonText">Each panel represents the avatar's health status in 5 year intervals. The metrics are connected with ribbons to reflect changes.&#10;Click on one specific biometric to study it closely.</Item>
-
-        <Item id="RibbonText2">The other panels have been moved to the right to reduce distraction.&#10;For more options, please click on the "Ribbons" panel.</Item>
+        <Item id="StatsTitle">Stats</Item>
+        <Item id="StatsText">The path is colored to show the health status of the avatar across the years. Additionally, the lifestyle of the three "interventions" are available. Click on the icons to show them.</Item>
     </Tutorials>
 </Localization>
