--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -25,24 +25,14 @@
 
     <Buttons>
         <Item id="Reset">Reset</Item>
-        <Item id="LineChart">Line Chart</Item>
         <Item id="Activity">Activity</Item>
         <Item id="Prius">Internals</Item>
         <Item id="Tutorial">Tutorial: {0}</Item>
         <Item id="Cancel">Cancel</Item>
         <Item id="Confirm">Confirm</Item>
-        <!-- Below are buttons specific to the line chart. -->
-        <Item id="LCRibbon">Show Ribbons</Item>
-        <Item id="LCTransparent">Transparent</Item>
-        <Item id="LCDim">Dim</Item>
-        <Item id="LCHide">Hide Bars</Item>
 
         <!-- Below are buttons for control panel. -->
-        <Item id="Controls">Controls</Item>
-        <Item id="NextVis">Next</Item>
-        <Item id="PrevVis">Previous</Item>
         <Item id="Animate">Play/Pause</Item>
-        <Item id="Settings">Settings</Item>
         <Item id="Language">Language: {0}</Item>
         <Item id="Exit">Exit</Item>
         <Item id="ResetAvatar">Reset Avatar</Item>
@@ -56,77 +46,36 @@
     <!-- Legneds are text displayed on world position canvases. -->
     <Legends>
         <!-- Headers -->
-        <Item id="HeaderInfo">Name: {0}&#10;Age: {1}&#10;Job: {2}&#10;Health: {3}</Item>
+        <Item id="HeaderInfo">Name: {0}&#10;Gender: {1}&#10;Age: {2}</Item>
         <Item id="HeaderMeet"> Meet {0}</Item>
         <Item id="HeaderJourney">Watch {0}'s Journey</Item>
 
         <!-- Panels -->
-        <Item id="RibbonChartHeader">Ribbons</Item>
-        <Item id="MainHeader">Controls</Item>
+        <Item id="Settings">Settings</Item>
+        <Item id="Data">Data</Item>
+        <Item id="Controls">Controls</Item>
 
-        <Item id="PanelVisual">Visual</Item>
         <Item id="PanelTime">Time</Item>
 
         <!-- Time progression -->
         <Item id="HeaderText">Year: {0} (Age {1})</Item>
         <Item id="SliderText">{0} year(s) after now</Item>
 
-        <!-- Line chart -->
-        <Item id="LCOverall">Overall</Item>
-        <Item id="LCBodyFat">Body Fat</Item> <!-- (%) -->
-        <Item id="LCBMI">BMI</Item>
-        <Item id="LCAIC">HbA1C</Item> <!-- (%) -->
-        <Item id="LCLDL">LDL</Item> <!-- (mg/dL) -->
-        <Item id="LCBP">Blood Pressure</Item>
-        <Item id="LCPresent">Present</Item>
-        <Item id="LCYear">{0} Years</Item>
+        <!-- Health biometrics -->
+        <Item id="Weight">Weight</Item>
+        <Item id="BMI">BMI</Item>
+        <Item id="glucose">Glucose</Item>
+        <Item id="AIC">HbA1C</Item> <!-- (%) -->
+        <Item id="SBP">SBP</Item>
+        <Item id="DBP">DBP</Item>
 
-        <!-- Prius -->
-        <!-- Currently not in use -->
-        <Item id="PriusWelcome">Please select a path to continue.</Item>
-
-        <Item id="PriHeartGood">Low blood pressure and cholesterol levels indicate a healthy circulatory system.</Item>
-        <Item id="PriHeartIntermediate">Rising blood pressure and cholesterol will start damaging arteries that can lead to clogging in the blood vessel.</Item>
-        <Item id="PriHeartBad">High blood pressure and cholesterol will clog the blood vessel and cause problems sucha as stroke and heart attack.</Item>
-
-        <Item id="PriLiverGood">With a slim body and low LDL levels, the liver has no problems.</Item>
-        <Item id="PriLiverIntermediate">A larger waist and rising LDL indicate that the liver is accumulating fat.</Item>
-        <Item id="PriLiverBad">Obesity and persistent high LDL cause fat to accumulate in the liver, leading to fatty liver.</Item>
-
-        <Item id="PriKidneyGood">Low blood pressure and low glucose allows the kidney to filter toxins out of the blood.</Item>
-        <Item id="PriKidneyIntermediate">Rising blood pressure and glucose starts to impair kidney function.</Item>
-        <Item id="PriKidneyBad">Persistent high blood pressure and high glucosee levels have led to kidney damage and the kidney stops filtering toxins, causing diabetes.</Item>
-    </Legends>
-
-    <!-- Archetype data -->
-    <Archetypes>
-        <!-- Info here subject to change. -->
+        <!-- Lifestyle -->
         <Item id="Exercise">Exercise</Item>
-        <Item id="Diet">Diet</Item>
-        <Item id="Adherence">Adherence</Item>
+        <Item id="Carb">Carb intake</Item>
+        <Item id="Fat">Fat intake</Item>
+        <Item id="Protein">Protein intake</Item>
         <Item id="Sleep">Sleep</Item>
-        <Item id="SleepHour">Time (Hours):</Item>
-        <Item id="Prescription">Prescription adherence:</Item>
-        <Item id="ExercisePerWeek">Exercise Per Week (Hours):</Item>
-        <Item id="DietCalorie">Calories:</Item>
-
-        <Item id="P1Name">Carl</Item>
-        <Item id="P1Occupation">Athlete</Item>
-        <!--
-        <Item id="P2Name">David</Item>
-        <Item id="P2Occupation">Driver</Item>
-        <Item id="P3Name">Eric</Item>
-        <Item id="P3Occupation">Programmer</Item>
-        -->
-        <Item id="P2Name">Abby</Item>
-        <Item id="P2Occupation">Worker</Item>
-        <!--
-        <Item id="P5Name">Britney</Item>
-        <Item id="P5Occupation">Clerk</Item>
-        <Item id="P6Name">Cindy</Item>
-        <Item id="P6Occupation">Doctor</Item>
-        -->
-    </Archetypes>
+    </Legends>
 
     <!-- Instructions are things that will be displayed on the overlay canvas. -->
     <Instructions>
@@ -134,19 +83,6 @@
 
         <Item id="StageCreate">Creating stage...</Item>
         <Item id="StageConfirm">Double tap to confirm stage position</Item>
-
-        <Item id="ArchetypeSelect">Select archetype to start</Item>
-        <Item id="ArchetypeRead">Reading archetype info...</Item>
-        <!-- Line chart -->
-        <!-- Currently NOT in use -->
-        <Item id="LCToggleRibbon">You have toggled the ribbon charts. This would allow you to focus on the data rather than the change.</Item>
-        <Item id="LCBackground">You just hid the light blue panel background. Click again to show them.</Item>
-        <Item id="LCDim">You just dimmed the bars. Click again to light them up.</Item>
-        <Item id="LCSet">You just hid the bars. Click again to show them.</Item>
-        <Item id="LCPullError">You clicked too fast. Wait a second and try again.</Item>
-        <Item id="LCPull">The selected section has been highlighted.</Item>
-        <!-- Prius -->
-        <Item id="PriHealthChange">Health of organ has changed. Check the panel on the right to learn more.</Item>
     </Instructions>
 
     <Tutorials>
@@ -161,9 +97,6 @@
 
         <Item id="StageTitle">Placing Stage</Item>
         <Item id="StageText">Move your device to adjust the position of the stage. Double tap to confirm its position.</Item>
-
-        <Item id="InteractionTitle">Interaction</Item>
-        <Item id="InteractionText">Touch an avatar to examine his/her stats.&#10;In general, click on AR objects, such as buttons, to interact with them.</Item>
 
         <Item id="LifestyleTitle">Lifestyles</Item>
         <Item id="LifestyleText">Click on the four icons to inspect the avatar's lifestyle.</Item>
