--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -64,10 +64,13 @@
         <!-- Health biometrics -->
         <Item id="Weight">Weight</Item>
         <Item id="BMI">BMI</Item>
-        <Item id="glucose">Glucose</Item>
+        <Item id="Glucose">Glucose</Item>
         <Item id="AIC">HbA1C</Item> <!-- (%) -->
         <Item id="SBP">SBP</Item>
         <Item id="DBP">DBP</Item>
+
+        <Item id="WeightBMI">Weight / BMI</Item>
+        <Item id="BloodPressure">Blood Pressure</Item>
 
         <!-- Lifestyle -->
         <Item id="Exercise">Exercise</Item>
