Network requests pt.4

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -45,11 +45,6 @@
 
     <!-- Legneds are text displayed on world position canvases. -->
     <Legends>
-        <!-- Headers -->
-        <Item id="HeaderInfo">Name: {0}&#10;Gender: {1}&#10;Age: {2}</Item>
-        <Item id="HeaderMeet"> Meet {0}</Item>
-        <Item id="HeaderJourney">Watch {0}'s Journey</Item>
-
         <!-- Panels -->
         <Item id="Settings">Settings</Item>
         <Item id="Data">Data</Item>
@@ -86,6 +81,8 @@
 
         <Item id="StageCreate">Creating stage...</Item>
         <Item id="StageConfirm">Double tap to confirm stage position</Item>
+
+        <Item id="CalculateData">Predicting future health...</Item>
     </Instructions>
 
     <Tutorials>
