--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -45,11 +45,6 @@
 
     <!-- Legneds are text displayed on world position canvases. -->
     <Legends>
-        <!-- Headers -->
-        <Item id="HeaderInfo">名前：{0}&#10;性別：{1}&#10;年齢：{2}</Item>
-        <Item id="HeaderMeet">{0}さんを会う</Item>
-        <Item id="HeaderJourney">{0}さんのジャーニーを見る</Item>
-
         <!-- Panels -->
         <Item id="Settings">設定</Item>
         <Item id="Data">Data</Item>
@@ -86,6 +81,8 @@
 
         <Item id="StageCreate">舞台創作中...</Item>
         <Item id="StageConfirm">Double tap to confirm stage position</Item>
+
+        <Item id="CalculateData">Predicting future health...</Item>
     </Instructions>
 
     <Tutorials>
