Network requests pt.8

--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -53,8 +53,7 @@
         <Item id="PanelTime">時間</Item>
 
         <!-- Time progression -->
-        <Item id="HeaderText">{0}年 ({1}歳)</Item>
-        <Item id="SliderText">{0}年後</Item>
+        <Item id="HeaderText">{0}年{1}月 ({2}歳)</Item>
 
         <!-- Health biometrics -->
         <Item id="Weight">Weight</Item>
@@ -83,6 +82,7 @@
         <Item id="StageConfirm">Double tap to confirm stage position</Item>
 
         <Item id="CalculateData">Predicting future health...</Item>
+        <Item id="NetworkError">An error encountered. Please try again.&#10;{0}</Item>
     </Instructions>
 
     <Tutorials>
