--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -53,8 +53,7 @@
         <Item id="PanelTime">Time</Item>
 
         <!-- Time progression -->
-        <Item id="HeaderText">Year: {0} (Age {1})</Item>
-        <Item id="SliderText">{0} year(s) after now</Item>
+        <Item id="HeaderText">Date: {1}/{0} (Age {2})</Item>
 
         <!-- Health biometrics -->
         <Item id="Weight">Weight</Item>
@@ -83,6 +82,7 @@
         <Item id="StageConfirm">Double tap to confirm stage position</Item>
 
         <Item id="CalculateData">Predicting future health...</Item>
+        <Item id="NetworkError">An error encountered. Please try again.&#10;{0}</Item>
     </Instructions>
 
     <Tutorials>
