Added different handling for server and request errors

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -82,7 +82,8 @@
         <Item id="StageConfirm">Double tap to confirm stage position</Item>
 
         <Item id="CalculateData">Predicting future health...</Item>
-        <Item id="NetworkError">An error encountered. Please try again.&#10;{0}</Item>
+        <Item id="ServerError">Server error. Retrying...</Item>
+        <Item id="RequestError">Invalid data. Please check your inputs.</Item>
     </Instructions>
 
     <Tutorials>
