Added date to detail panels

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -54,7 +54,8 @@
 
         <!-- Time progression -->
         <Item id="HeaderText">Date: {1}/{0} (Age {2})</Item>
-
+        <Item id="Date">Date: {1}/{0}</Item>
+        
         <!-- Health biometrics -->
         <Item id="Weight">Weight</Item>
         <Item id="BMI">BMI</Item>
