--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -54,6 +54,7 @@
 
         <!-- Time progression -->
         <Item id="HeaderText">{0}年{1}月 ({2}歳)</Item>
+        <Item id="Date">{0}年{1}月</Item>
 
         <!-- Health biometrics -->
         <Item id="Weight">Weight</Item>
