Unit conversion in detail panels

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -21,6 +21,9 @@
         <Item id="PriHeart">Heart</Item>
         <Item id="PriLiver">Liver</Item>
         <Item id="PriKidney">Kidney</Item>
+
+        <Item id="SI">SI (cm/kg)</Item>
+        <Item id="Imperial">Imperial (ft/in/lb)</Item>
     </General>
 
     <Buttons>
@@ -34,6 +37,7 @@
         <!-- Below are buttons for control panel. -->
         <Item id="Animate">Play/Pause</Item>
         <Item id="Language">Language: {0}</Item>
+        <Item id="Unit">Unit: {0}</Item>
         <Item id="Exit">Exit</Item>
         <Item id="ResetAvatar">Reset Avatar</Item>
         <Item id="ResetStage">Reset Stage</Item>
@@ -55,7 +59,7 @@
         <!-- Time progression -->
         <Item id="HeaderText">Date: {1}/{0} (Age {2})</Item>
         <Item id="Date">Date: {1}/{0}</Item>
-        
+
         <!-- Health biometrics -->
         <Item id="Weight">Weight</Item>
         <Item id="BMI">BMI</Item>
