--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -21,6 +21,9 @@
         <Item id="PriHeart">心臓</Item>
         <Item id="PriLiver">肝臓</Item>
         <Item id="PriKidney">腎臓</Item>
+
+        <Item id="SI">SI (cm/kg)</Item>
+        <Item id="Imperial">Imperial (ft/in/lb)</Item>
     </General>
 
     <Buttons>
@@ -34,6 +37,7 @@
         <!-- Below are buttons for control panel. -->
         <Item id="Animate">Play/Pause</Item>
         <Item id="Language">言語：{0}</Item>
+        <Item id="Unit">Unit: {0}</Item>
         <Item id="Exit">エクシ</Item>
         <Item id="ResetAvatar">Reset Avatar</Item>
         <Item id="ResetStage">Reset Stage</Item>
